FIX: horizontal scroll problems

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -152,16 +152,19 @@
 
 .child {
   height: calc(100vh - var(--nav-height-sm));
-  width: 100%;
+  width: 80%;
   border-radius: 5px;
-  margin-right: 3rem;
-  padding: 20px;
+  margin-right: 2rem;
+  padding: 20px 0;
   display: inline-block;
   scroll-snap-align: center;
 }
 
+.child:first-child {
+  margin-left: 1rem;
+}
 .child:last-child {
-  margin-right: 0;
+  margin-right: 1rem;
 }
 
 .child__content {
