--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,7 +64,7 @@ body {
 
 section {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   padding-top: var(--nav-height-sm);
   scroll-snap-align: start;
 }
